--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <h3>Hey Guys, My Name is <a href="https://www.linkedin.com/in/yugaltawlare/" >YUGAL</a>.</h3><br>
                 <h3>Welcome To My Resume</h3>
                 <h3>I am a Student at PRMITR,Badnera</h3>
-                <a href="Contact Me.html">Conatact Me</a>
+                <a href="Contact Me.html">Contact Me: </a>
             </td>
         </tr>
     </table>
